@@ -55,7 +55,8 @@ PEOPE WHO MADE LANGUAGE FILES
 - ASM                    Tux
 - ASP                    Amit Gupta
 - AutoHotkey             Naveen Garg
-- AutoIT                 mastrboy
+- AutoIt                 mastrboy
+- Autoconf               Mihai Vasilian
 - AviSynth               Ryan Jones
 - Awk                    George Pollard
 - Bash                   Andreas Gohr
