@@ -14,6 +14,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.7
   -  Added language files
+     * Autoconf (Mihai Vasilian)
      * ECMAScript (Michel Mariani)
      * J (Ric Sherlock)
   -  Minor change in INT_BASIC number regexp to support '..' range operator
